# gtfo-pa

./: CMakeLists.txt  README.md
manifest/: manifest.xml
plugin/: CMakeLists.txt
plugin/include/: process_handler.hpp
plugin/src/: main.cpp  process_handler.cpp
